examples/test/testpolicy10470.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10470
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key21: value29
      key36: value38
      key40: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value44
          key27: value41
          key30: value42
      podSelector:
        matchLabels:
          key6: value32
          key17: value1
          key39: value30
